<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="drawer_opened">open navigation drawer</string>
    <string name="phone_number">Phone number</string>
    <string name="email_address">Email address</string>
    <string name="drawer_closed"> close navigation drawer</string>
    <string name="app_name">Student Assist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">297115703779135</string>
    <string name="title_activity_home_screen">Welcome!</string>
    <string name="button1">post add for apartment</string>
    <string name="button2"> search for apartment</string>
    <string name="title_activity_accommodation">Accommodation</string>
    <string name="title_activity_airport">Student Organisations</string>
    <string name="desc">click me</string>
    <string name="title">title me</string>
    <string name="description">Description</string>
    <string name="title_activity_courses">Courses</string>
    <string name="app_label">StudentAssist</string>
    <string name="search_hint">search for Organisations</string>
    <string name="list_of_services">list of services</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_search_view">SearchViewActivity</string>
    <string name="findContact">find your contact</string>
    <string name="menu_search">services</string>
    <string name="title_activity_accomodation">Accommodation</string>
    <string name="postAdButton">Post a Vacancy</string>
    <string name="searchAdButton">Search for a Vacancy</string>
    <string name="title_activity_search_accomodation">Search for a Vacancy</string>
    <string name="title_activity_post_accomodation">Post a Vacancy</string>
    <string name="ApartmentType">Apartment Type:</string>
    <string name="ApartmentName">Apartment Name:</string>
    <string name="NoOfRooms">No. Of Rooms:</string>
    <string name="ApartmentNo">Apartment #:</string>
    <string name="NoOfVacancies">Vacancies:</string>
    <string name="Sex">Looking For:</string>
    <string name="Cost">Cost per Month:</string>
    <string name="Description">Additional Details:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="PostAd">Post Vacancy</string>
    <string name="SearchAd">Search Vacancy</string>
    <string name="Airport">Go to Pickup</string>
    <string name="Courses">Go to Sources</string>
    <string name="Logout">Logout</string>
    <string name="PostVacancy">Post Vacancy</string>
    <string name="vacancy">Vacancy Posted By:</string>
    <string name="Phone">Phone/Mobile</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="parameter">parameter</string>
    <string name="value">value</string>
    <string name="largeText">Large Text</string>
    <string name="mediumText">Medium Text</string>
    <string name="smallText">Small Text</string>
    <string name="searchVacancy">Search Vacancy</string>
    <string name="MessageButton">Message</string>
    <string name="CallButton">Call</string>
    <string name="adDetails"><u>Accommodation Ad Details</u></string>
    <string name="title_activity_ad_details">Accommodation Ad Details</string>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="title_activity_testing_action_bar">TestingActionBar</string>
    <string name="title_activity_user_settings">User Settings</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="courseNo">Course Number:</string>
    <string name="courseName">Course Name:</string>
    <string name="courseDesc">Course Description:</string>
    <string name="courseMajor">Major:</string>
    <string name="courseAvgGrades">Avg. Grades:</string>
    <string name="courseVideoUrl">Video Url:</string>
    <string name="title_activity_add_course">Add Course</string>
    <string name="addCourse">Add Course</string>
    <string name="addCoursesymbol"> + Course</string>
    <string name="reset">Reset</string>
    <string name="addMajor"> Add Major </string>
    <string name="majorName">Major Name:</string>
    <string name="majorCode">Major Code:</string>
    <string name="addReview">Add Review</string>
    <string name="difficulty">Difficulty</string>
    <string name="courseStructure">Structure</string>
    <string name="jobProspects">Job Prospects</string>
    <string name="addGrades">Add Grades</string>
    <string name="four">4.0 (A)</string>
    <string name="three">3.0 (B)</string>
    <string name="two">2.0 (C)</string>
    <string name="one">1.0 (D)</string>
    <string name="error">Error</string>
    <string name="reviews">Reviews</string>
    <string name="success">Success</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="editEmail">Edit Email</string>
    <string name="editPhone">Edit Phone</string>
    <string name="oldEmail">Old Email</string>
    <string name="newEmail">New Email</string>
    <string name="oldPhone">Old Phone</string>
    <string name="newPhone">New Phone</string>
    <string name="save">Save</string>
    <string name="confirm">Confirm</string>

    <string-array name="no_of_rooms">
        <item>1 bhk/1 bath</item>
        <item>1 bhk/2 bath</item>
        <item>2 bhk/1 bath</item>
        <item>2 bhk/2 bath</item>
        <item>3 bhk/1 bath</item>
        <item>3 bhk/2 bath</item>
        <item>3 bhk/3 bath</item>
        <item>Shared</item>
        <item>Other</item>
    </string-array>
    <string-array name="majors">
        <item>Electrical Engineering</item>
        <item>Computer Science Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Civil Engineering</item>
        <item>Aeronautical Engineering</item>
    </string-array>
    <string-array name="no_of_vacancies">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>Other</item>
        <item>Lease Transfer</item>
    </string-array>
    <string-array name="occcupant_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Doesnt Matter</item>
    </string-array>
    <string-array name="search_parameters">
        <item>Apartment Type</item>
        <item>Apartment Name</item>
        <item>Gender</item>
    </string-array>
    <string-array name="apartment_type">
        <item>On-Campus</item>
        <item>Off-Campus</item>
        <item>Dorms</item>
    </string-array>

    <string name="delete">Delete</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_empty_fragment">EmptyFragment</string>
    <string name="title_activity_email_phone">Email and Phone</string>
    <string name="title_activity_recently_viewed">RecentlyViewed</string>
    <string name="title_activity_notification_display">NotificationDisplayActivity</string>
    <string name="title_activity_notification_settings">NotificationSettingsActivity</string>
    <string name="title_activity_implement_soon">ImplementSoon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="progressBarHtml"><![CDATA[<html>  <div class=\"slider\"> \t<div class=\"line\"></div> \t<div class=\"break dot1\"></div> \t<div class=\"break dot2\"></div> \t<div class=\"break dot3\"></div> </div>  <style>  @import url(http://fonts.googleapis.com/css?family=Raleway:100);   body{ background:#222; margin: 40px 50px; } h1{ color:#4a8df8; font-family: \'Raleway\', cursive; font-weight:100; font-stretch:normal; font-size:3em; } .slider{ position:absolute; width:400px; height:2px; margin-top:-30px } .line{ position:absolute; background:#4a8df8; width:400px; height:2px; } .break{ position:absolute; background:#222; width:6px; height:2px; }   .dot1{ -webkit-animation: loading 2s infinite; -moz-animation: loading 2s infinite; -ms-animation: loading 2s infinite; -o-animation: loading 2s infinite; animation: loading 2s infinite; } .dot2{ -webkit-animation: loading 2s 0.5s infinite; -moz-animation: loading 2s 0.5s infinite; -ms-animation: loading 2s 0.5s infinite; -o-animation: loading 2s 0.5s infinite; animation: loading 2s 0.5s infinite; } .dot3{ -webkit-animation: loading 2s 1s infinite; -moz-animation: loading 2s 1s infinite; -ms-animation: loading 2s 1s infinite; -o-animation: loading 2s 1s infinite; animation: loading 2s 1s infinite; }   @keyframes \"loading\" { from { left: 0; } to { left: 400px; } } @-moz-keyframes loading { from { left: 0; } to { left: 400px; } } @-webkit-keyframes \"loading\" { from { left: 0; } to { left: 400px; } } @-ms-keyframes \"loading\" { from { left: 0; } to { left: 400px; } } @-o-keyframes \"loading\" { from { left: 0; } to { left: 400px; } </style>  </html>]]></string>
    <string name="title_activity_test">TestActivity</string>

    <string name="drawerOpen">drawerOpened</string>
    <string name="drawerClose">drawerClosed</string>
    <string name="Apartment_Name">Apartment Name</string>
    <string name="submit">Submit</string>
    <string name="add">add</string>
    <string name="Open">open</string>
    <string name="Cancel">Cacnel</string>
    <string name="Dont_delete">Don\'t Delete</string>
    <string name="delete_subscription">Delete Subscription</string>
    <string name="subscribe_text">Click here to get push notifications in this search criteria</string>
    <string name="facebookId">Do you want to be contacted through facebook messenger? If so we need your faceook Id\n \t\t\t\t\t\t visit http://findmyfbid.com</string>
    <string name="subscribe">subscribe</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="subscription_alert">Do you want to subscribe for push notifications when someone posts a vacancy in this search criteria?</string>
    <string name="successfully_posted">Successfully Posted!!</string>
    <string name="apartment_types">Apartment Types</string>
    <string name="gender">Gender</string>
    <string name="on_campus">On-Campus</string>
    <string name="off_campus">Off-Campus</string>
    <string name="dorms">Dorms</string>
    <string name="type_university_name">University Name</string>
    <string name="university_settings">University Settings</string>
    <string name="university_name">University Name</string>
    <string name="university_names">University Names</string>
    <string name="subscribe_for_notifications">Subscribe For Notifications</string>


</resources>