<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/leftSpinner"
        android:actionViewClass="android.widget.Spinner"
        android:showAsAction="always"
        android:title="@string/parameter" />
    <item
        android:id="@+id/value_spinner"
        android:actionViewClass="android.widget.Spinner"
        android:showAsAction="always"
        android:title="@string/value" />
    <item
        android:id="@+id/advanced_Search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/advanced_search" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Logout" />

</menu>