<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editTextColourWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/subscription_alert"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/courseDetailsBackground" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/courseDetailsBackground" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/no"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/borderlessbutton_bg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/yes"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/borderlessbutton_bg"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>


