<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/editTextColourWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/apartmentNameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/Apartment_Name"
            android:textColor="@color/editTextColourBlack"
            android:textColorHighlight="@color/editTextColourBlack"
            android:textColorHint="@color/buttonColourGrey"
            android:textColorLink="@color/editTextColourBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:background="@drawable/borderlessbutton_bg"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/okButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:scaleType="fitXY"
                android:background="@drawable/borderlessbutton_bg"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
