<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/buttonColourWhiteSolid"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/subscription_alert"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/courseDetailsBackground" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apt Type"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />

            <TextView
                android:id="@+id/aptTypeDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ApartmentType"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apt Name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />

            <TextView
                android:id="@+id/aptNameDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ApartmentType"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/Sex"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />

            <TextView
                android:id="@+id/genderDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ApartmentType"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/courseDetailsBackground" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/no"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/borderlessbutton_bg"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/yes"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/borderlessbutton_bg"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>
</LinearLayout>


