<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editTextColourWhite"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/apartmentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apartment Information"
            android:textColor="#000"
            android:textSize="27sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/universityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/university_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/universityNamesSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="150dip"
            android:gravity="center" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/aptTypeSearch"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/ApartmentType"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/aptTypeSpinnerSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:dropDownWidth="150dip"
            android:gravity="left" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/aptName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ApartmentName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/aptNameSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="150dip"
            android:gravity="center"
            android:paddingBottom="10dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/noOfRooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/NoOfRooms"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#000" />

        <Spinner
            android:id="@+id/noOfRoomsSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:dropDownWidth="150dip"
            android:gravity="center" />


    </LinearLayout>


</LinearLayout>
